# prompt-sanitizer

./: .env.example  .gitignore  README.md  pyproject.toml  setup.sh
src/aegis/: __main__.py  cli.py  config.py
src/aegis/audit/: logger.py  reader.py
src/aegis/detection/: allowlist.py  engine.py  pii.py  secrets.py
src/aegis/proxy/: app.py  router.py
src/aegis/redaction/: redactor.py
src/aegis/service/: installer.py
src/aegis/viewer/: api.py
src/aegis/viewer/static/: index.html
src/aegis/viewer/static/assets/: index-CxltInwt.js
tests/: conftest.py  test_allowlist.py  test_audit_logger.py  test_audit_reader.py  test_cli.py  test_config.py  test_engine.py  test_integration.py  test_pii.py  test_proxy_router.py  test_proxy_streaming.py  test_redactor.py  test_secrets.py  test_service.py  test_viewer_api.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.tsx  api.ts
viewer/src/components/: RedactionBadge.tsx  RequestDetail.tsx  Stats.tsx  Timeline.tsx
